Closed Bug 1635015 Opened 5 years ago Closed 5 years ago

Crash in [@ mozilla::layers::CanvasTranslator::Flush]

Categories

(Core :: Graphics, defect)

Unspecified
Windows 10
defect

Tracking

()

RESOLVED FIXED
mozilla78
Tracking Status
firefox-esr68 --- unaffected
firefox75 --- disabled
firefox76 --- disabled
firefox77 --- disabled
firefox78 --- fixed

People

(Reporter: gsvelto, Assigned: bobowen)

References

Details

(Keywords: crash)

Crash Data

Attachments

(1 file)

This bug is for crash report bp-a852f0ed-ada3-4a40-87cf-7d5ab0200502.

Top 10 frames of crashing thread:

0 xul.dll mozilla::layers::CanvasTranslator::Flush gfx/layers/ipc/CanvasTranslator.cpp:276
1 xul.dll mozilla::layers::CanvasTranslator::TranslateRecording gfx/layers/ipc/CanvasTranslator.cpp:231
2 xul.dll mozilla::layers::CanvasTranslator::StartTranslation gfx/layers/ipc/CanvasTranslator.cpp:154
3 xul.dll mozilla::detail::RunnableMethodImpl< xpcom/threads/nsThreadUtils.h:1220
4 xul.dll mozilla::TaskQueue::Runner::Run xpcom/threads/TaskQueue.cpp:208
5 xul.dll nsThreadPool::Run xpcom/threads/nsThreadPool.cpp:300
6 xul.dll nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:1200
7 xul.dll NS_ProcessNextEvent xpcom/threads/nsThreadUtils.cpp:481
8 xul.dll mozilla::ipc::MessagePumpForNonMainThreads::Run ipc/glue/MessagePump.cpp:302
9 xul.dll MessageLoop::RunHandler ipc/chromium/src/base/message_loop.cc:308

This is NULL pointer dereference with the value probably coming from the mDevices field. The oldest buildid for this crash is 20200416214356. There are three crash reports coming from nightly 72 but they're orphaned (i.e. they lack metadata) so I would ignore them because the version number is taken from the browser that sent the crash, not the one where the crash happened.

Severity: -- → S3
Flags: needinfo?(bobowencode)

Looks like I just need to add a null check in here.
I imagine this can happen if we have a device reset and then fail (or decide not to) create a new one.

Assignee: nobody → bobowencode
Status: NEW → ASSIGNED
Flags: needinfo?(bobowencode)
Pushed by bobowencode@gmail.com: https://hg.mozilla.org/integration/autoland/rev/fb4a0e72e2ad Add mDevice null check to CanvasTranslator::Flush. r=mattwoodrow
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla78
Blocks: 1548487
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: