Bug 1635015: Add mDevice null check to CanvasTranslator::Flush. r=mattwoodrow

Differential Revision: https://phabricator.services.mozilla.com/D75068